--- a/public/admin-asset/docs/assets/css/adminlte.css
+++ b/public/admin-asset/docs/assets/css/adminlte.css
@@ -30254,8 +30254,8 @@ a.text-muted:hover {
 
 .accent-blue .page-item.active a,
 .accent-blue .page-item.active .page-link {
-  background-color: #008000;
-  border-color: #008000;
+  background-color: #007bff;
+  border-color: #007bff;
   color: #ffffff;
 }
 
